--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,26 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+
+.error {
+    border: 1px solid;
+    padding: 10px;
+    border-radius: 5px;
+    color: red;
+    margin: 10px 0;
+}
+
+.success {
+    border: 1px solid green;
+    border-radius: 5px;
+    padding: 10px;
+    border-radius: 5px;
+    color: green;
+    margin: 10px 0;
+}
+
+
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
