--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,27 @@
+@import url('https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;500;600;700&display=swap');
+
+*, ::after, ::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    /* border: 1px solid black; */
+    font-family: "Hind Madurai", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+}
+
+h2, h1, h3, h4 {
+    font-weight: 700;
+}
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+    display: flex;
+    width: 80%;
+    justify-content: center;
+    margin: 0 auto;
+    padding: 2rem;
+    text-align: center;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
 
 .error {
     border: 1px solid;
@@ -36,27 +40,90 @@
     margin: 10px 0;
 }
 
-
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.blog-display {
+    width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.log-details {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin: 10px 0;
 }
 
-.card {
-  padding: 2em;
+.log-details > p {
+    padding: 10px;
 }
 
-.read-the-docs {
-  color: #888;
+.blog-form-container {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    padding: 10px;
 }
+
+.blog-form-container > * {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.blog-show-when-visible {
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.blog-form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px;
+    margin-top: 10px;
+    border: 1px solid black;
+}
+
+.blog-form > button {
+    align-self: center;
+}
+
+.blog-form > div {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 10px;
+}
+
+.blog-form > div > input {
+    padding: 5px;
+    width: 100%;
+}
+
+.blog-form > div > span {
+    padding: 5px;
+}
+
+.blog-card {
+    display: flex;
+    flex-direction: column;
+    margin: 10px 0;
+    border: 1px solid black;
+}
+
+.blog-always-shown {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    padding-left: 10px;
+}
+
+.blog-details {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 10px;
+    padding: 10px;
+}
+
