--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,10 @@ h2, h1, h3, h4 {
     font-weight: 700;
 }
 
+button {
+    padding: 10px 20px;
+}
+
 #root {
     display: flex;
     width: 80%;
@@ -125,5 +129,15 @@ h2, h1, h3, h4 {
     align-items: start;
     gap: 10px;
     padding: 10px;
+}
+
+.like-section {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.heart-button {
+    padding: 5px 10px;
 }
 
