--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;500;600;700&display=swap");
+#login, #login-form {
+  display: flex;
+  flex-direction: column;
+}
+
 *,
 ::after,
 ::before {
@@ -38,13 +43,15 @@ a {
   padding: 20px;
   background-color: rgb(255, 253, 242);
   box-shadow: 0px 1px 4px rgb(142, 142, 142);
+  border-radius: 10px;
 }
 
 .page-title {
   font-size: 1.3em;
-  margin-bottom: 20px;
-  text-align: left;
-  border-bottom: 1px dashed black;
+  color: #f8fafb;
+  margin: 20px 0px;
+  padding: 10px;
+  border-bottom: 4px solid white;
 }
 
 .error {
@@ -106,6 +113,11 @@ a {
   background-color: rgb(251, 110, 110);
 }
 
+.blog-form, .blog-show-when-visible {
+  display: flex;
+  flex-direction: column;
+}
+
 *,
 ::after,
 ::before {
@@ -143,13 +155,15 @@ a {
   padding: 20px;
   background-color: rgb(255, 253, 242);
   box-shadow: 0px 1px 4px rgb(142, 142, 142);
+  border-radius: 10px;
 }
 
 .page-title {
   font-size: 1.3em;
-  margin-bottom: 20px;
-  text-align: left;
-  border-bottom: 1px dashed black;
+  color: #f8fafb;
+  margin: 20px 0px;
+  padding: 10px;
+  border-bottom: 4px solid white;
 }
 
 .blog-form-container {
@@ -158,8 +172,6 @@ a {
 }
 
 .blog-show-when-visible {
-  display: flex;
-  flex-direction: column;
   background-color: rgb(238, 248, 249);
   padding: 10px;
   border: 1px solid rgb(30, 44, 236);
@@ -168,8 +180,6 @@ a {
 }
 
 .blog-form {
-  display: flex;
-  flex-direction: column;
   gap: 10px;
   padding: 10px;
   margin-top: 10px;
@@ -202,6 +212,35 @@ a {
   padding: 5px;
 }
 
+#login-form {
+  border: 1px solid black;
+  background-color: #f8fafb;
+  border-radius: 10px;
+  padding: 20px;
+  align-self: center;
+  gap: 15px;
+  box-shadow: 0 2px 4px rgb(120, 119, 119);
+  justify-content: start;
+}
+#login-form div {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  justify-content: space-between;
+}
+#login-form div input {
+  border: none;
+  border-bottom: 1px solid black;
+  padding: 5px;
+}
+#login-form button {
+  align-self: center;
+  padding: 5px 20px;
+  border-radius: 10px;
+  border: 1px solid green;
+  margin-top: 10px;
+}
+
 *,
 ::after,
 ::before {
@@ -239,13 +278,15 @@ a {
   padding: 20px;
   background-color: rgb(255, 253, 242);
   box-shadow: 0px 1px 4px rgb(142, 142, 142);
+  border-radius: 10px;
 }
 
 .page-title {
   font-size: 1.3em;
-  margin-bottom: 20px;
-  text-align: left;
-  border-bottom: 1px dashed black;
+  color: #f8fafb;
+  margin: 20px 0px;
+  padding: 10px;
+  border-bottom: 4px solid white;
 }
 
 #root {
@@ -256,6 +297,8 @@ a {
   padding: 2rem;
   text-align: center;
   background-color: #f8fafb;
+  background-color: rgb(39, 38, 38);
+  height: 100vh;
 }
 #root div {
   width: 100%;
@@ -263,7 +306,7 @@ a {
 
 #add-form-button {
   display: flex;
-  justify-content: start;
+  justify-content: center;
 }
 #add-form-button button {
   color: rgb(30, 44, 236);
