--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;500;600;700&display=swap");
-#login, #login-form {
+#login,
+#login-form {
   display: flex;
   flex-direction: column;
 }
@@ -12,7 +13,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font: 100% "Hind Madurai", sans-serif;
+  font:
+    100% "Hind Madurai",
+    sans-serif;
   color: rgb(70, 70, 70);
 }
 
@@ -49,9 +52,10 @@ a {
 .page-title {
   font-size: 1.3em;
   color: #f8fafb;
+  color: black;
   margin: 20px 0px;
   padding: 10px;
-  border-bottom: 4px solid white;
+  border-bottom: 4px solid black;
 }
 
 .error {
@@ -113,7 +117,8 @@ a {
   background-color: rgb(251, 110, 110);
 }
 
-.blog-form, .blog-show-when-visible {
+.blog-form,
+.blog-show-when-visible {
   display: flex;
   flex-direction: column;
 }
@@ -124,7 +129,9 @@ a {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font: 100% "Hind Madurai", sans-serif;
+  font:
+    100% "Hind Madurai",
+    sans-serif;
   color: rgb(70, 70, 70);
 }
 
@@ -161,9 +168,10 @@ a {
 .page-title {
   font-size: 1.3em;
   color: #f8fafb;
+  color: black;
   margin: 20px 0px;
   padding: 10px;
-  border-bottom: 4px solid white;
+  border-bottom: 4px solid black;
 }
 
 .blog-form-container {
@@ -213,7 +221,6 @@ a {
 }
 
 #login-form {
-  border: 1px solid black;
   background-color: #f8fafb;
   border-radius: 10px;
   padding: 20px;
@@ -247,7 +254,9 @@ a {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font: 100% "Hind Madurai", sans-serif;
+  font:
+    100% "Hind Madurai",
+    sans-serif;
   color: rgb(70, 70, 70);
 }
 
@@ -284,21 +293,21 @@ a {
 .page-title {
   font-size: 1.3em;
   color: #f8fafb;
+  color: black;
   margin: 20px 0px;
   padding: 10px;
-  border-bottom: 4px solid white;
+  border-bottom: 4px solid black;
 }
 
 #root {
   display: flex;
   width: 80%;
-  justify-content: center;
+  justify-content: start;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
   background-color: #f8fafb;
-  background-color: rgb(39, 38, 38);
-  height: 100vh;
+  min-height: 100vh;
 }
 #root div {
   width: 100%;
